# Kairo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  canaries.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
kairo/: __init__.py  canary.py  condition.py  main.py  mutation.py  utils.py
src/: Kairo.py  main.py  utils.py
src/canary/: __init__.py  canary.py
src/condition/: __init__.py  condition.py
src/mutation/: __init__.py  mutation.py
tests/: test_utils.py
tests/data/test_canaries/: expected.json
tests/data/test_no_matches/: canaries.yaml  request.json
tests/data/test_no_mutations/: canaries.yaml
tests/data/test_override_config/: canaries.yaml  expected.json
tests/integration/: test_canary.py  test_kairo.py
tests/unit/: test_canary.py  test_condition.py  test_kairo.py  test_mutation.py
