[project]
name = "driftradar-vision"
version = "0.1.0"
description = "Vision drift monitoring with Great Expectations + Evidently + MLflow (Milestone A: DQ gates)."
authors = [{ name = "Abdulvahap Mutlu", email = "abdulvahapmutlu1@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-sugar>=1.0",
  "ruff>=0.6.9",
  "black>=24.8",
  "mypy>=1.11",
  "types-PyYAML>=6.0.12",
  "ipykernel",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["driftradar_vision*"], exclude = ["tests*"] } }
include-package-data = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "SIM"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["driftradar_vision"]
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
addopts = "-q --color=yes --maxfail=1"
pythonpath = ["src"]