[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo"
version = "1.0.1"
description = "A configuration-driven engine that dynamically mutates incoming payloads based on conditional rules defined in YAML or JSON."
authors = [{ name = "Victor Juarez", email = "vjuarez7@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "types-PyYAML>=6.0.12"
]

[tool.setuptools]
# Map top-level package to your src folder
package-dir = {"" = "kairo"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["kairo"]
include = ["kairo*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["kairo"]
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["kairo"]